Zipkin tracing 100% requisicoes

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,10 @@ server:
 spring:
   application:
     name: naming-server
+  management:
+    tracing:
+      sampling:
+        probability: 1.0
 eureka:
   client:
     register-with-eureka: false
