--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,12 @@
 server:
   port: 8761
+eureka:
+  client:
+    register-with-eureka: false
+    fetch-registry: false
+    # para evitar autoregistro - util se exists varios eurekas
+    service-url:
+      defaultZone: ${EUREKA_CLIENT_SERVICEURL_DEFAULTZONE:http://localhost:8761/eureka}
 spring:
   application:
     name: naming-server
@@ -7,8 +14,5 @@ spring:
     tracing:
       sampling:
         probability: 1.0
-eureka:
-  client:
-    register-with-eureka: false
-    fetch-registry: false
-  # para evitar autoregistro - util se exists varios eurekas
+  zipkin:
+    base-url: ${SPRING_ZIPKIN_BASEURL:http://localhost:9411}
