--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 	<properties>
 		<java.version>21</java.version>
 		<spring-cloud.version>2025.0.0</spring-cloud.version>
+        <!--<springdoc.version>2.8.9</springdoc.version>-->
 	</properties>
 	<dependencies>
 		<dependency>
@@ -49,6 +50,10 @@
         <dependency>
             <groupId>io.zipkin.reporter2</groupId>
             <artifactId>zipkin-reporter-brave</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.zipkin.reporter2</groupId>
+            <artifactId>zipkin-sender-urlconnection</artifactId> <!-- fix ConnectionException -->
         </dependency>
         <dependency>
             <groupId>io.micrometer</groupId>
